CSS: Prevent navbar stretching in Salem (PR #2788)

--- a/css/targets/html/salem/_parts-salem.scss
+++ b/css/targets/html/salem/_parts-salem.scss
@@ -42,12 +42,14 @@ $sidebar-breakpoint: $content-width + $sidebar-width + $content-side-padding * 2
 }
 
 @mixin page-block {
-  & {   // quiet sass warnings
-    max-width: var(--page-width);
-    margin-left: auto;
-    margin-right: auto;
-  }
   @at-root {
+    @media screen and (width > 800px) {
+      & {
+          max-width: var(--page-width);
+          margin-left: auto;
+          margin-right: auto;
+      }
+    }
     @media screen and (width > 1100px) {
       & {
         border-left: 1px solid var(--page-border-color);
